fix: fixes #23 table view cells are clipped at the top

--- a/app/component/departures-table.scss
+++ b/app/component/departures-table.scss
@@ -59,7 +59,7 @@ table.nearby-departures-table {
       @include font-narrow-book;
       font-size: $font-size-small;
       margin: 0;
-      line-height: 1em;
+      line-height: 1.15em;
       display: flex;
       &:nth-child(even){
         background-color: $white;
